--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <input id="first" type="number">
         </fieldset>
     </form>
-    <button>Add</button>
+    <button>Add to total</button>
     <h1>0</h1>
 
     <script src="js/script.js"></script>
